fix: bug on small screens

--- a/src/pages/calculator/Calculator.module.css
+++ b/src/pages/calculator/Calculator.module.css
@@ -9,7 +9,7 @@
 }
 
 .fieldset {
-  min-width: 304px;
+  min-width: 208px;
   border: none;
   display: grid;
   justify-items: center;
@@ -76,8 +76,4 @@
 
 .measureUnitFt {
   left: 75px;
-}
-
-.heightField {
-  display: flex;
 }
